# PortfolioGA

./: CMakeLists.txt  FundamentalData.cpp  FundamentalData.h  Gnuplot.cpp  Gnuplot.h  OperatorOverloading.cpp  OperatorOverloading.h  Population.cpp  Population.h  Portfolio.cpp  Portfolio.h  README.md  Stock.h  Tests.cpp  Tests.h  Utility.cpp  Utility.h  database.cpp  database.h  main.cpp  marketdata.cpp  marketdata.h
